--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   /* background-image: url(./Assets/Images/bg1.jpg); */
   background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
+  background-attachment: fixed;
   background-repeat: no-repeat;
   margin: 0 !important;
   font-family: 'Raleway' !important;
@@ -15,11 +16,14 @@ height: 100%;
 }
 
 .container {
-width: 30% !important;
-transform: translate(0, 100%);
-background-color: ghostwhite;
-padding: 50px;
+  width: 30% !important;
+  transform: translate(0, 100%);
+  background-color: ghostwhite;
+  padding: 0 !important;
+  margin-right: auto;
+  margin-left: auto;
 }
+
 
 .load-spin {
 color: cadetblue!important;
@@ -35,13 +39,10 @@ font-weight: 600 !important;
 }
 
 .gal-content {
-height: 100vh;
-overflow: auto;
-margin-left: auto;
-margin-right: auto;
-width: 70%;
-background-color: ghostwhite;
-/* padding: 10px; */
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+  background-color: ghostwhite;
 }
 
 .folder-layout {
@@ -101,7 +102,7 @@ text-decoration: none;
 }
 
 .image-content {
-text-align: center;
+  text-align: center;
 }
 
 .col img {
@@ -113,9 +114,9 @@ object-fit: cover;
 .folders {
 display: grid;
 justify-content: center;
-grid-template-columns: 280px 280px 280px 280px;
-padding-top: 10px;
-grid-gap: 10px;
+grid-template-columns: repeat(5, 1fr);
+grid-column-gap: 5px;
+grid-row-gap: 5px;
 }
 
 .image-grid {
@@ -198,6 +199,12 @@ text-align: center;
   margin: 0;
   padding-top: 10px;
 }
+
+.controls {
+  display: flex;
+  justify-content: center;
+}
+
 .image-item {
 cursor: pointer;
 }
@@ -209,6 +216,7 @@ border-radius: 5px;
 box-shadow: 0px 0px 7px 0px #8a8a8a;
 }
 
+
 .react-contextmenu-wrapper {
 width: 100%;
 }
@@ -219,13 +227,16 @@ width: 100%;
   margin-bottom: 3px;
   padding: 2px 0;
 }
+
 .react-contextmenu-item--divider:hover {
   background-color: transparent;
   border-color: rgba(0,0,0,.15);
 }
+
 .modal-footer>* {
   margin: 5px !important;
 }
+
 .modal-content {
   position: relative;
   display: flex;
@@ -256,6 +267,12 @@ width: 100%;
   border-color: transparent;
   background-color: transparent;
 }
+.login-content {
+  display: flex;
+  flex-direction: column;
+  padding: 20px !important;
+}
+
 
 @media (max-width: 320px){
   .image-grid {
@@ -324,11 +341,6 @@ margin: 2px;
 margin: 50px;
 }
 
-.login-content {
-display: flex;
-flex-direction: column;
-transform: translate(0, 100%);
-}
 
 .image-grid {
   grid-template-columns: repeat(4, 1fr);
