--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,8 @@ height: 100%;
   padding: 0 !important;
   margin-right: auto;
   margin-left: auto;
+  border-bottom-left-radius: 10px !important;
+  border-bottom-right-radius: 10px !important;
 }
 
 
@@ -238,15 +240,12 @@ width: 100%;
 }
 
 .modal-content {
-  position: relative;
-  display: flex;
   transform: translateY(100%);
-  flex-direction: column;
   width: 100%;
-  pointer-events: auto;
-  background-color: #fff;
-  border-radius: 0;
-  outline: 0;
+  background-clip: inherit !important;
+  border-radius: 0 !important;
+  border-bottom-left-radius: 10px !important;
+  border-bottom-right-radius: 10px !important;
 }
 
 .modal-buttons {
@@ -257,16 +256,23 @@ width: 100%;
   align-items: center;
   justify-content: flex-end;
   padding: 0;
-  border-bottom-right-radius: calc(.3rem - 1px);
-  border-bottom-left-radius: calc(.3rem - 1px);
+  border-bottom-left-radius: 10px !important;
+  border-bottom-right-radius: 10px !important;
 }
 
 .modal-buttons button {
   width: 100%;
   color: #fff;
-  border-color: transparent;
+  border: 0 !important;
   background-color: transparent;
 }
+
+.modal-buttons button:hover {
+  color: rgb(34, 34, 34) !important;
+  border: 0 !important;
+  background-color: transparent;
+}
+
 .login-content {
   display: flex;
   flex-direction: column;
